--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
   <title>Mobile web page</title>
 </head>
 <body>
-  <header></header>
+  <header>
+    <img src="./assets/imgs/batatabit.svg" alt="batatabit">
+    <div class="header--title-container">
+      <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+      <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+      <a href="" class="header--button">Conoce Nuestros Planes <span>i</span> </a>
+    </div>
+  </header>
   <main>
     <section></section>
     <section></section>
