--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </tr>
               <tr>
                 <td>Ripple</td>
-                <td class="table__right">$ 2.17 <span class="down"></span></td>
+                <td class="table__right">$ 2.15<span class="down"></span></td>
               </tr>
               <tr>
                 <td class="table__bottom-left">Stellar</td>
@@ -54,29 +54,29 @@
           </div>
         </div>
         <div class="main-currency-table">
-          <p class="currency-table--title">Comisiones</p>
+          <p class="currency-table--title2">Comisiones</p>
           <div class="currency-table--container">
             <table>
               <tr>
-                <td class="table__top-left">Bitcoin</td>
-                <td class="table__top-right table__right">$1.96</td>
+                <td class="table__top-left">Bitrade</td>
+                <td class="table__top-right table__right">$ 12.96</td>
               </tr>
               <tr>
-                <td>Ethereum</td>
-                <td class="table__right">$ 0.07</td>
+                <td>Bitpreco</td>
+                <td class="table__right">$ 13.07</td>
               </tr>
               <tr>
-                <td>Ripple</td>
-                <td class="table__right">$2.17 <span class="down"></span></td>
+                <td>Novadax</td>
+                <td class="table__right">$ 13.15</td>
               </tr>
               <tr>
-                <td class="table__bottom-left">Stellar</td>
-                <td class="table__bottom-right table__right">$4.96<span class="down"></span></td>
+                <td class="table__bottom-left">Coinext</td>
+                <td class="table__bottom-right table__right">$ 14.96</td>
               </tr>
             </table>
           </div>
-          <div class="currency-table--date">
-            <p><b>Actualizado:</b>  19 de Julio 23:45</p>
+          <div class="currency-table--date2">
+            <p><b>Actualizado:</b>  19 de Julio 23:48</p>
           </div>
         </div>
         <div></div>
