--- a/index.html
+++ b/index.html
@@ -90,13 +90,30 @@
       </div>
       <section class="product-cards--container">
         <article class="product-detail--card">
-          <span class="clock"></span>
+          <img class="card-icon" src="./assets/icons/clock.svg" alt="clock">
           <p class="product-card--title">Tiempo Real</p>
           <p class="product-card--body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
         </article>
+        <article class="product-detail--card">
+          <img class="card-icon" src="./assets/icons/eye.svg" alt="eye">
+          <p class="product-card--title">No hay tasas escondidas</p>
+          <p class="product-card--body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+        </article>
+        <article class="product-detail--card">
+          <img class="card-icon" src="./assets/icons/dollar-sign.svg" alt="dollar-sign">
+          <p class="product-card--title">Compara monedas</p>
+          <p class="product-card--body">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+        </article>
+        <article class="product-detail--card">
+          <img class="card-icon" src="./assets/icons/check-circle.svg" alt="check-circle">
+          <p class="product-card--title">Información confiable</p>
+          <p class="product-card--body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+        </article>
       </section>
     </section>
-    <section></section>
+    <section class="bitcoin-img-container">
+      <h2>Conócelo hoy.</h2>
+    </section>
     <section></section>
   </main>
   <footer></footer>
