--- a/index.html
+++ b/index.html
@@ -121,12 +121,30 @@
       </div>
       <section class="plans-container--slider">
         <article class="plans-container--card">
+          <p class="mensual">Básico</p>
+          <div class="plan-info-container">
+            <h3 class="plan-card--title">Pago Mensual</h3>
+            <p class="plan-card--price"> <span>$</span>19</p>
+            <p class="plan-card--saving">*La solución ideal para principiantes</p>
+            <button class="plan-card--ca">Escoger este <span></span> </button>
+          </div>
+        </article>
+        <article class="plans-container--card">
           <p class="recommended">Recomendado</p>
           <div class="plan-info-container">
             <h3 class="plan-card--title">Pago Anual</h3>
             <p class="plan-card--price"> <span>$</span>99</p>
             <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
-            <button class="plan-card--ca">Escoger este</button>
+            <button class="plan-card--ca">Escoger este <span></span> </button>
+          </div>
+        </article>
+        <article class="plans-container--card">
+          <p class="ilimitado">Exclusivo</p>
+          <div class="plan-info-container">
+            <h3 class="plan-card--title">Un solo pago de</h3>
+            <p class="plan-card--price"> <span>$</span>299</p>
+            <p class="plan-card--saving">*Ten acceso ilimitado y para siempre</p>
+            <button class="plan-card--ca">Escoger este <span></span> </button>
           </div>
         </article>
       </section>
