mobile version done

--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
       </section>
     </section>
   </main>
-  <footer></footer>
+  <footer>
+    <section class="left">
+      <ul>
+        <li><a href="#">Linkedin</a></li>
+        <li><a href="#">Crunchbase</a></li>
+        <li><a href="#">Hackernews</a></li>
+      </ul>
+    </section>
+    <section>
+      <img src="./assets/imgs/batatabit2020.svg" alt="batatabit-logo-2020">
+    </section>
+  </footer>
 </body>
 </html>
